# oicana-example-python-fastapi

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  e2e.yml
blobs/: 00000000-0000-0000-0000-000000000000
routers/: blobs.py  certificates.py  templates.py
tests/: test_app.py
